notebookbar: fix alignment of vertical tabs
-Adjust container height to 4.25rem to match overflow-group
 container height. This ensures consistent alignment for both
 vertical and horizontal tabs across all states

Adapt patch to LibreOffice Online.

--- a/browser/css/jsdialogs.css
+++ b/browser/css/jsdialogs.css
@@ -362,21 +362,18 @@ algned to the bottom */
 }
 .notebookbar.ui-overflow-group:not(.ui-overflow-group-container-with-label) {
 	align-content: center;
-	height: 49px !important;
-	margin-bottom: 14px;
+	height: 4.25rem !important;
+	margin-bottom: 12px;
 }
 
 .ui-overflow-manager > .notebookbar.ui-iconview {
 	align-content: initial; /* fixes scrolling range, for example in #stylesview */
 }
 
-.ui-overflow-manager
-	> .notebookbar:not(.ui-separator):not(.ui-overflow-group):not(
-		:has(.ui-overflow-group-container-with-label)
-	) {
-	height: 49px;
-	/* 14px extra margin for containers without label */
-	margin-bottom: 14px;
+.ui-overflow-manager > .notebookbar:not(.ui-separator):not(.ui-overflow-group):not(:has(.ui-overflow-group-container-with-label)) {
+	height: 4.25rem;
+	/* 12px extra margin for containers without label */
+	margin-bottom: 12px;
 }
 .ui-overflow-manager .notebookbar.ui-overflow-group-container-with-label {
 	justify-content: end;
